--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,6 +8,7 @@
     "seed-admin": "node seed/adminSeed.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
