--- a/Backend/.env
+++ b/Backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://vinaygujar3622:Vinay123@cluster0.tyekjnb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb://localhost:27017/quizdb
 JWT_SECRET=verysecretkey
 JWT_EXPIRES_IN=7d
 COOKIE_SECURE=false
